--- a/src/app/components/attribute-panel/attribute-panel.component.less
+++ b/src/app/components/attribute-panel/attribute-panel.component.less
@@ -1,4 +1,33 @@
 @import "../../../styles.less";
+.drawer-menu{
+  tr {
+    td:first-child {
+      border-left: 1px solid #f3f6f8;
+      padding:1px!important;
+      text-align: center;
+    }
+  
+    td {
+      border-right: 1px solid #f3f6f8;
+      padding:1px!important;
+      text-align: center;
+    }
+  }
+  
+  thead {
+    tr {
+      th:first-child {
+        border-left: 1px solid #f3f6f8;
+      }
+  
+      th {
+        border-top: 1px solid #f3f6f8;
+        border-right: 1px solid #f3f6f8;
+      }
+    }
+  }
+}
+
 @content-font-size: 12px;
 
 .attribute-title {
