--- a/src/app/components/tool-bar/tool-bar.component.html
+++ b/src/app/components/tool-bar/tool-bar.component.html
@@ -438,7 +438,7 @@
                     <input 
                         dTextInput 
                         name="model" 
-                        placeholder="model.pb" 
+                        [(placeholder)]="placeholderModel" 
                         [(ngModel)]="formDataCreateFlowunit.model" />
                 </d-form-control>
             </d-form-item>
