--- a/src/app/components/tool-bar/tool-bar.component.less
+++ b/src/app/components/tool-bar/tool-bar.component.less
@@ -1,8 +1,12 @@
 @import "../../../styles.less";
 
 .project-name {
-    font-size  : 28px;
+    font-size  : 14px;
     font-weight: 500;
+}
+
+::ng-deep .devui-btn{
+    width:100%;
 }
 
 .graph-name {
@@ -96,7 +100,6 @@
 }
 
 .tool-bar {
-    height         : 44px;
     width          : 100%;
     right          : 10px;
     background     : #fff;
@@ -106,10 +109,12 @@
     justify-content: space-between;
     align-items    : center;
     margin-bottom  : 15px;
+    vertical-align: middle;
+    padding:6px;
 
     .tool-bar-left {
         display    : inline-block;
-        width      : 40%;
+        width      : 25%;
         user-select: none;
         margin-left: 24px;
         left       : 0;
@@ -156,7 +161,8 @@
         display   : inline-block;
         text-align: center;
         max-width : 280px;
-        height    : 44px;
+        
+        vertical-align: middle;
     }
 
     .align-origin {
